New car adding and car editing features

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -67,5 +67,11 @@
     </div>
 </div>
 
+<div class="container d-flex justify-content-end mb-4">
+    <a href="{% url 'add_car' %}" class="btn btn-primary btn-lg" style="background-color: deepskyblue;border: none;">
+        + Sell Car
+    </a>
+</div>
+
 </body>
 </html>
