--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -3,63 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <title>Car Listings</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 
     <style>
         body {
             background-color: #f8f9fa;
         }
 
-        .card {
-            width: 100%;
-            height: 100%;
+        .navbar-brand {
+            font-weight: bold;
         }
 
         .card-img-top {
             width: 100%;
             height: 200px;
             object-fit: cover;
-            display: block;
         }
 
-        .card-title {
-            transition: color 0.3s;
+        .card-title a {
+            color: #343a40;
+            text-decoration: none;
         }
 
-        .card-title:hover {
-            color: lightblue;
+        .card-title a:hover {
+            color: #0d6efd;
         }
 
         .card-text {
-            font-weight: bold;
-            font-size: 20px;
+            font-size: 1.2rem;
+            font-weight: 500;
         }
 
-        .card a {
-            text-decoration: none;
-            color: inherit;
+        .auth-buttons .btn {
+            margin-left: 10px;
         }
 
-        .card a:hover {
-            text-decoration: none;
+        .user-info {
+            margin-right: 10px;
+        }
+
+        .sell-btn {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            z-index: 1000;
         }
     </style>
 </head>
 <body>
 
-<div class="container py-4">
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm px-4">
+    <a class="navbar-brand" href="{% url 'index_view' %}">CarHub</a>
+    <div class="ms-auto d-flex align-items-center">
+        {% if user.is_authenticated %}
+        <span class="user-info">Welcome, <strong>{{ user.username }}</strong></span>
+        <a href="{% url 'user_logout' %}" class="btn btn-outline-danger">Log Out</a>
+        {% else %}
+        <a href="{% url 'register' %}" class="btn btn-outline-primary">Register</a>
+        <a href="{% url 'login' %}" class="btn btn-outline-success ms-2">Log In</a>
+        {% endif %}
+    </div>
+</nav>
+
+<!-- Main Container -->
+<div class="container py-5">
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         {% for car in cars %}
         <div class="col">
             <div class="card h-100 shadow-sm">
-                <img src="{{ car.image.url }}" class="card-img-top" alt="Car Image" onerror="this.src='/static/images/placeholder.jpg'">
-                <div class="card-body d-flex flex-column justify-content-between">
+                <img src="{{ car.image.url }}" class="card-img-top" alt="Car Image"
+                     onerror="this.src='/static/images/placeholder.jpg'">
+                <div class="card-body">
                     <h5 class="card-title">
                         <a href="{% url 'detail_view' car.name %}">{{ car.name }}</a>
                     </h5>
-                    <p class="card-text">${{ car.price }}</p>
+                    <p class="card-text text-primary">${{ car.price }}</p>
                 </div>
             </div>
         </div>
@@ -67,11 +87,10 @@
     </div>
 </div>
 
-<div class="container d-flex justify-content-end mb-4">
-    <a href="{% url 'add_car' %}" class="btn btn-primary btn-lg" style="background-color: deepskyblue;border: none;">
-        + Sell Car
-    </a>
-</div>
+<!-- Sell Button -->
+<a href="{% url 'add_car' %}" class="btn btn-primary btn-lg sell-btn">
+    + Sell Car
+</a>
 
 </body>
 </html>
